--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -126,7 +126,7 @@
                         #Manualcontrol style="color:#ff651e;"
                         [disabled]="BillItem.PreOrder === true">Manual</mat-slide-toggle>
                 </div>
-                <div *ngIf="company.ID == 241 || company.ID == 300 " class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
+                <div *ngIf="company.ID == 241 || company.ID == 300 || company.ID == 1" class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Order" color="primary" [(ngModel)]="BillItem.Order" class="example-margin"
                         #Ordercontrol style="color:#ff651e;" 
                         >Order</mat-slide-toggle>
@@ -489,7 +489,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Order Shop</mat-label>
                         <mat-select name="ShopID" [(ngModel)]="BillItem.OrderShop" required>
-                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList" > {{Ts.Name}}
+                            <mat-option [value]="Ts.ID" *ngFor="let Ts of shopListSS" > {{Ts.Name}}
                                 <span [style.color]="'blue'"
                                     *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
                             </mat-option>
