--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -536,7 +536,7 @@
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Amount</mat-label>
                         <input matInput name="Amount" type="number" min="0" [(ngModel)]="Service.Price"
-                            (blur)="calculations('Amount', 'serviceSubTotal')" required #Amountcontrol>
+                            (blur)="calculations('Amount', 'serviceSubTotal')" required #Amountcontrol [disabled]="user.SalePermission == 'false'  && user.UserGroup != 'CompanyAdmin'">
                         <mat-error>
                             Amount is required
                         </mat-error>
